NEED TO fix create post on mobile

--- a/front-end/src/pages/post/CreatePost.css
+++ b/front-end/src/pages/post/CreatePost.css
@@ -56,3 +56,14 @@
   cursor: pointer;
   width: 30%;
 } */
+
+@media screen and (max-width: 768px) {
+  #post_header {
+    font-size: 2.5rem;
+  }
+}
+@media screen and (max-width: 530px) {
+  #post_header {
+    font-size: 1.8rem;
+  }
+}
